--- a/Filtier.css
+++ b/Filtier.css
@@ -13,3 +13,80 @@ body {
 	padding: 0;
 	background-color: white;
 }
+
+main {
+	width: 100%;
+	height: auto;
+	text-align: center;
+	background-color: cyan;
+	background-image: radial-gradient(#03fcdf, #03c2fc);
+}
+
+footer {
+	background-color: darkgray;
+	text-align: center;
+}
+
+#topBanner {
+	background-color: blue;
+	display: flex;
+	overflow: hidden;
+	justify-content: center;
+	align-items: center;
+}
+
+#topBanner img {
+	min-width: 20%;
+	min-height: 10%;
+	max-width: 100%;
+	max-height: 80%;
+	flex-shrink: 0;
+}
+
+/*Credits to www.w3schools.com for the dropdown menu and button code.*/
+#navigationBar {
+	display: flex;
+  	min-width: 100%;
+	min-height: auto;
+	margin: 0;
+	padding: 0;
+	overflow: visible;
+	position: relative;
+	background-color: #000;
+}
+
+#navigationBar a {
+	float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#navigationBar a:hover {
+  background-color: #363636;
+}
+
+#sideButtons {
+	position: relative;
+  	font-size: 16px;
+  	border: none;
+  	outline: none;
+  	color: black;
+  	align-content: center;
+  	align-items: center;
+  	text-align: center;
+  	line-height: 30px;
+  	flex: 1;
+}
+
+#sideButtons a {
+	height: 32px;
+  	color: #ffffff;
+}
+
+#sideButtons a:hover {
+	background-color: #363636;
+	cursor: pointer;
+}
