--- a/Filtier.css
+++ b/Filtier.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 /* CSS Document */
 
+/* All code was derived from W3schools */
+
 html {
 	min-width: 100%;
 	min-height: 100%;
@@ -13,3 +15,304 @@ body {
 	padding: 0;
 	background-color: white;
 }
+
+main {
+	width: 100%;
+	height: auto;
+	text-align: center;
+	background-color: cyan;
+	background-image: radial-gradient(#03fcdf, #03c2fc);
+}
+
+footer {
+	background-color: darkgray;
+	text-align: center;
+}
+
+#topBanner {
+	background-color: blue;
+	display: flex;
+	overflow: hidden;
+	justify-content: center;
+	align-items: center;
+}
+
+#topBanner img {
+	min-width: 20%;
+	min-height: 10%;
+	max-width: 100%;
+	max-height: 80%;
+	flex-shrink: 0;
+}
+
+/*Credits to www.w3schools.com for the dropdown menu and button code.*/
+#navigationBar {
+	display: flex;
+  	min-width: 100%;
+	min-height: auto;
+	margin: 0;
+	padding: 0;
+	overflow: visible;
+	position: relative;
+	background-color: #000;
+}
+
+#navigationBar a {
+	float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#navigationBar a:hover {
+  background-color: #363636;
+}
+
+#sideButtons {
+	display: block;
+	position: relative;
+  	font-size: 16px;
+  	border: none;
+  	outline: none;
+  	color: black;
+  	align-content: center;
+  	align-items: center;
+  	text-align: center;
+  	line-height: 30px;
+  	flex: 1;
+}
+
+#sideButtons a {
+	height: 32px;
+  	color: #ffffff;
+}
+
+#sideButtons a:hover {
+	background-color: #363636;
+	cursor: pointer;
+}
+
+.container {
+  display: block;
+  vertical-align: middle;
+  float: right;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  min-height: 100%;;
+  min-width: auto;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #FFFFFF;
+  margin: 10px 0 0 0;
+  transition: 0.4s;
+  
+}
+
+.change .bar1 {
+  
+  transform: rotate(-45deg) translate(-11px, 10px);
+}
+
+.change .bar2 {
+	opacity: 0;
+}
+
+.change .bar3 {
+  
+  transform: rotate(45deg) translate(-11px, -10px);
+}
+
+/*For the boxes under the button when clicked,
+There default text color, position is absolute and does not move at all,
+background color is whiteish-grey, minimum width of 160px,
+with a box shadow, and it will be overlapping the content behind it.*/
+.dropdown-content {
+  	display: none;
+  	position: static;
+	min-width: 100%;
+	min-height: auto;
+	background-color: #22B0FF;
+  	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content li {
+	padding: 0;
+}
+
+/*makes the boxes have alignment as none, text color as black,
+with space taken up inside, no underlines or dashes,
+display as block, and the text will be aligned left.*/
+.dropdown-content a {
+  	display: inline-block;
+	padding: 0;
+	margin: 0;
+	float: none;
+	text-align: center;
+	text-decoration: none;
+	font-size: 25px;
+	color: black;
+}
+
+#navlist {
+	list-style: none;
+}
+
+.aBoxes {
+	display: block;
+	width: 100%;
+	height: 100%;
+	float: left;
+}
+
+.aBoxes:hover {
+	background-color: aquamarine;
+}
+
+.txt {
+	float: left;
+	margin-left: 2%;
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+	display: none;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;	
+  box-sizing: border-box;
+  border: 5px solid black;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.slideshowImg {
+	height: 100%;
+	width: 100%;
+	object-fit: fill;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+
+#donateImage {
+	width: 25%;
+	height: auto;
+}
+
+#learnImage {
+	width: 15%;
+	height: auto;
+}
+
+#volunteerImage {
+	width: 25%;
+	height: auto;
+}
+
+.indexBtn {
+	color: black;
+	background-color: rgba(1,234,0,0.90);
+	border: 2.5px solid #2FA76E;
+	border-radius: 5px;
+	box-shadow: 1px 2px 1px 1px;
+	min-width: 150px;
+	min-height: 50px;
+	max-width: 300px;
+	max-height: 100px;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, "sans-serif";
+	font-size: 20px;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+.sections {
+	background-color: aquamarine;
+	width: 100%;
+	height: auto;
+	border: thin solid #000000;
+	padding-bottom: 2%;
+}
+
